force-app/main/default/objects/redwing__LMS_Sharing_Rule__c/redwing__LMS_Sharing_Rule__c.object-meta.xml
<CustomObject>
    <label>LMS Sharing Rule</label>
    <nameField>
        <label>LMS Sharing Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LMS Sharing Rules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>