force-app/main/default/objects/redwing__LMS_Sharing_Rule__c/fields/redwing__Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>redwing__Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>