force-app/main/default/objects/redwing__LMS_Sharing_Rule__c/fields/redwing__Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>redwing__Rule_Type__c</fullName>
    <inlineHelpText>Type of the rule</inlineHelpText>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple Rule</fullName>
                <default>true</default>
                <label>Simple Rule</label>
            </value>
            <value>
                <fullName>Advanced Rule</fullName>
            </value>
            <value>
                <fullName>Rule Condition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>